Add "Sync" action button

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">RoboBoy</string>
     <string name="menu_search">Search...</string>
+    <string name="menu_sync">Sync</string>
 </resources>
