--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_name">RoboBoy</string>
     <string name="menu_search">Search...</string>
     <string name="menu_sync">Sync</string>
-    <string name="menu_delete">Del</string>
-    <string name="menu_preferences">Pref</string>
+    <string name="menu_delete">Delete repository</string>
+    <string name="menu_preferences">Preferences</string>
+    <string name="menu_new">Add page</string>
 </resources>
