Menu item to save the text

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="menu_delete">Delete repository</string>
     <string name="menu_preferences">Preferences</string>
     <string name="menu_new">Add page</string>
+
+    <string name="page_menu_save">Save</string>
 </resources>
