--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="menu_search">Search...</string>
     <string name="menu_sync">Sync</string>
     <string name="menu_delete">Delete repository</string>
-    <string name="menu_preferences">Preferences</string>
+    <string name="menu_settings">Settings</string>
     <string name="menu_new">Add page</string>
 
     <string name="page_menu_save">Save</string>
